Sample Form Representation Files modified - [leftnav.html,Cx2QueryExecutorServiceImpl.java,DashBoards.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,Cx2QueryExecutorService_V1.java,cx2_query.json,Cx2QueryExecutorService.java,DashBoards.html,Cx2QueryExecutorServiceImpl_V1.java]

--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -29,6 +29,13 @@
                         </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow18" padding="1em unset unset unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn42">
+                        <wm-label padding="unset 0.5em" name="label20" caption="Select date" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn43"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn44"></wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow14" padding="1em unset">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn30">
                         <wm-composite name="composite3">
@@ -40,6 +47,23 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn31"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn32"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow15" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn33">
+                        <wm-chart type="Pie" title="Pie Chart" height="250px" iconclass="wi wi-pie-chart" name="chartFormByType" dataset="bind:Variables.svFormsData.dataSet"></wm-chart>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn34"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn35"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow16" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn36"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn37"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn38"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow17" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn39"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn40"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn41"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
