--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -16,7 +16,7 @@
             <wm-anchor name="anchorInspections" iconclass="wi wi-find-in-page" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item10">
-            <wm-anchor name="anchor10" iconclass="wi wi-bar-graph" caption="Statistics" on-click="Variables.goToPage_UserStatistics.invoke()" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee"></wm-anchor>
+            <wm-anchor name="anchor10" iconclass="wi wi-bar-graph" caption="Statistics" on-click="Variables.goToPage_DashBoards.invoke()" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item6">
             <wm-anchor name="anchor6" iconclass="wi wi-phone" caption="Support" on-click="Variables.goToPage_Support.invoke()"></wm-anchor>
