--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -49,22 +49,28 @@
                     <wm-gridcolumn columnwidth="4" name="gridcolumn32"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow15" padding="2em unset">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn33">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn33" padding="unset 1em">
                         <wm-chart type="Pie" title="Pie Chart" height="250px" iconclass="wi wi-pie-chart" name="chartFormTypes" dataset="bind:Variables.lvMasterForms.dataSet" aggregation="count" aggregationcolumn="formTypeId" groupby="formTypes.formType"
                         xaxisdatakey="formTypes.formType" yaxisdatakey="formTypeId" labeltype="value" showlegend="top"></wm-chart>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn34"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn35"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset 1em unset unset">
+                        <wm-chart type="Pie" title="Pie Chart" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.lvMasterForms.dataSet" aggregation="count" aggregationcolumn="formTypeId" groupby="formTypes.formType" xaxisdatakey="formTypes.formType"
+                        yaxisdatakey="formTypeId" labeltype="value" showlegend="top" name="chartCategories"></wm-chart>
+                    </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow16" padding="2em unset">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn36"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn37"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn38"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn36" padding="unset 1em unset unset">
+                        <wm-chart type="Pie" title="Pie Chart" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.lvFees.dataSet" aggregation="count" aggregationcolumn="formStatuses.formTypes.id" groupby="feeType" xaxisdatakey="feeType" yaxisdatakey="formStatuses.formTypes.id"
+                        labeltype="value" showlegend="top" name="chartFee" orderby="id:desc"></wm-chart>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn37" padding="unset unset unset 1em">
+                        <wm-chart type="Column" title="Column Chart" height="250px" iconclass="wi wi-bar-chart" name="chartDay" dataset="bind:Variables.lvMasterForms.dataSet" aggregation="count" aggregationcolumn="formGuid" groupby="dateModified" xaxisdatakey="dateModified"
+                        yaxisdatakey="formGuid" xdateformat="%c" ynumberformat=".f"></wm-chart>
+                    </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17" padding="2em unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn39"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn40"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn41"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
