--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -254,12 +254,14 @@
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn139">
                                                 <wm-livegrid formlayout="dialog" name="livegrid1">
                                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.SharedWithData.dataSet" navigation="Classic" name="gridSharedwith" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
-                                                        <wm-grid-column binding="usersBySharedWithUser.firstName" caption="First Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                                        <wm-grid-column binding="usersBySharedWithUser.lastName" caption="Last Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                                        <wm-grid-column binding="usersBySharedWithUser.email" caption="Email Address" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                                        <wm-grid-column binding="createdOn" caption="Date Added" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="text"
-                                                        readonly="false"></wm-grid-column>
-                                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                        <wm-grid-column binding="usersBySharedWithUser.fullName" caption="Name" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                                                        <wm-grid-column binding="usersBySharedWithUser.email" caption="Email Address" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true"
+                                                        related-entity-name="Users"></wm-grid-column>
+                                                        <wm-grid-column binding="createdOn" caption="Date Added" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" edit-widget-type="timestamp"
+                                                        show="true" filterwidget="text" readonly="false"></wm-grid-column>
+                                                        <wm-grid-column binding="usersByCreatedBy.fullName" caption="Added By" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true"
+                                                        related-entity-name="Users"></wm-grid-column>
+                                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="Add User" show="bind:Variables.svUserPermissions.dataSet.canEdit" class="btn-primary" iconclass="wi wi-plus" title="Add User" action="addNewRow()"
                                                         shortcutkey="" disabled="false"></wm-grid-action>
                                                         <wm-grid-action key="customButton" display-name="Invite User" show="bind:Variables.svUserPermissions.dataSet.canEdit" class="btn-secondary" iconclass="wi wi-plus" title="Invite User"
@@ -786,8 +788,13 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view5">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Attach Document" iconclass="wi wi-attach-file" name="dialogUploadDocument" on-close="dialogUploadDocumentClose($event, $scope)">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Document Upload" iconclass="wi wi-attach-file" name="dialogUploadDocument" on-close="dialogUploadDocumentClose($event, $scope)">
             <wm-layoutgrid name="layoutgrid23">
+                <wm-gridrow name="gridrow32">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn82_0">
+                        <wm-label padding="unset 0.5em 2em 0.5em" caption="Click the &quot;Choose Files&quot; button to select one or many documents you would like to add to the form, then click the &quot;Upload&quot; button to attach the file(s)." name="label82_0"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow85">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn167">
                         <input type="file" name="docsToUpload" ng-file-model="docsToUpload" multiple="">
@@ -803,18 +810,13 @@
     <wm-view class="dialog-view" name="viewTagPeople">
         <wm-dialog dialogtype="design-dialog" modal="true" title="Tag People" iconclass="wi wi-tag" name="dialogTagPeople" width="70%">
             <wm-layoutgrid name="layoutgrid4">
-                <wm-gridrow name="gridrow20" padding="unset unset 1em unset">
+                <wm-gridrow name="gridrow20" padding="unset unset 3em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31_3">
-                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them an alert that they have been tagged on your message."
+                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification that they have been tagged on your message."
                         horizontalalign="center" textalign="left"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow81_2" padding="unset unset 4em unset">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn153_1">
-                        <wm-label name="label84_1" caption="When you are done tagging people, click the &quot;Close&quot; button below and post your message."></wm-label>
-                    </wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow13">
+                <wm-gridrow name="gridrow13" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn28_1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="7" name="gridcolumn18_1">
                         <wm-composite name="composite5">
@@ -829,9 +831,9 @@
                         <wm-button class="btn-primary" caption="Add Tag" type="button" margin="unset 0.5em" name="ButtonTagPeople" iconclass="wi wi-plus" on-click="ButtonTagPeopleClick($event, $scope)" horizontalalign="left" disabled="bind:!Widgets.textSearchPeople.datavalue"></wm-button>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow14" padding="2px unset unset unset">
+                <wm-gridrow name="gridrow14" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn31"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="7" name="gridcolumn20_1" padding="2em unset unset unset">
+                    <wm-gridcolumn columnwidth="7" name="gridcolumn20_1">
                         <wm-panel iconclass="wi wi-tag" name="panel1" title="Tagged">
                             <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.PeopleList.dataSet" navigation="Scroll" name="livelistTaggedPeople" nodatamessage="No people have been selected.">
                                 <wm-listtemplate layout="media" name="listtemplate1">
@@ -857,6 +859,11 @@
                     <wm-gridcolumn columnwidth="3" name="gridcolumn30"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow15_1"></wm-gridrow>
+                <wm-gridrow name="gridrow81_2">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn153_1">
+                        <wm-label name="label84_1" caption="When you are done tagging people, click the &quot;Close&quot; button to return to the form, then click &quot;Post&quot; to submit your message."></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions6">
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button14" iconclass="wi wi-cancel"></wm-button>
