finishing icon update Files modified - [MyProfile.html,ManageSubscriptions.html]

--- a/src/main/webapp/pages/ManageSubscriptions/ManageSubscriptions.html
+++ b/src/main/webapp/pages/ManageSubscriptions/ManageSubscriptions.html
@@ -23,7 +23,7 @@
                                     <wm-grid-action key="addNewRow" display-name="New Subscription" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Subscription" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="That user is already subscribed to the selected municipality." title="Create Subscription" formlayout="dialog" iconclass="wi wi-account-box" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet"
+                                <wm-liveform novalidate="false" errormessage="That user is already subscribed to the selected municipality." title="Create Subscription" formlayout="dialog" iconclass="wi wi-library-add" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet"
                                 captionalign="left" captionposition="top" name="liveform2">
                                     <wm-layoutgrid columns="1" name="layoutgrid3">
                                         <wm-gridrow name="gridrow5">
