Percentage Fees Files modified - [DashBoards.html]

--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -72,7 +72,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow16" padding="2em unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn36" padding="unset 1em">
-                        <wm-chart type="Pie" title="chartFee" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.svFeeByTypes.dataSet" labeltype="value" showlegend="top" name="chartFee" xaxisdatakey="fee" yaxisdatakey="counts" theme="Orient"></wm-chart>
+                        <wm-chart type="Pie" title="chartFee" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.svFeeByTypes.dataSet" labeltype="percent" showlegend="top" name="chartFee" xaxisdatakey="fee" yaxisdatakey="counts" theme="Orient"></wm-chart>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn37" padding="unset 1em unset unset">
                         <wm-chart type="Pie" title="Vendors" height="250px" iconclass="wi wi-pie-chart" name="chartVendors" dataset="bind:Variables.svFormsVendorsData.dataSet" xaxisdatakey="vendorCompany" yaxisdatakey="counts" theme="Orient"></wm-chart>
