updated poorly copy/pasted disclaimer text on MyCart. Made "ManageInspections" tile only available to InspectorManager/MuniAdmin/CXAdmin as requested Files modified - [MunicipalityInspections.html,MyCart.html]

--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -10,9 +10,10 @@
                         <wm-breadcrumb dataset="bind:Variables.Breadcrumb.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow2" padding="1em unset">
+                <wm-gridrow name="gridrow2" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-label padding="unset 0.5em" name="label1" caption="All credit card transactions are subject to either a $1.00 or 3.5% convenience fee, whichever is greater.  This fee is imposed by CivicXpress, not the participating municipalities.  This fee covers bank transaction costs associated with credit card transac"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label1" caption="All credit card transactions are subject to either a $1.00 or 3.5% convenience fee, whichever is greater."></wm-label>
+                        <wm-label padding="unset 0.5em" name="label2" caption="This fee is imposed by CivicXpress, not the participating municipalities.  This fee covers bank transaction costs associated with credit card transactions.  This convenience fee may be avoided by paying directly at the municipalities payment counter."></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow3">
